Change workflow to auto deploy to Azure as test with auto-approve

--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -28,6 +28,9 @@ jobs:
     - name: 'Terraform Plan'
       run: terraform plan
 
+    - name: 'Terraform Apply'
+      run: terraform apply -auto-approve
+
     # Use manual approval for Terraform Apply in production environments
     # - name: 'Terraform Apply'
     #   run: terraform apply -auto-approve
