--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -3,36 +3,51 @@ name: 'DeployLandingZone'
 on:
   push:
     branches:
-      - master
+      - dev
+      - test
+      - prod
   pull_request:
+    branches:
+      - dev
+      - test
+      - prod
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
-
-    env: # Set the environment variables for the whole job
+    # Environment variables for Azure authentication
+    env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-
     steps:
     - uses: actions/checkout@v4
 
     - name: 'Setup Terraform'
       uses: hashicorp/setup-terraform@v3.0.0
       with:
-        terraform_version: 1.1.0
+        terraform_version: '1.1.0'
+
+    # Dynamically set the environment directory based on the branch name
+    - name: 'Set Environment Directory'
+      run: |
+        ENV_DIR="terraform/${GITHUB_REF#refs/heads/}"
+        echo "TF_ENV_DIR=$ENV_DIR" >> $GITHUB_ENV
+        echo "Working in environment directory $ENV_DIR"
 
     - name: 'Terraform Init'
-      run: terraform init
+      run: terraform init -backend-config=${{ env.TF_ENV_DIR }}/backend.tfvars
 
     - name: 'Terraform Plan'
-      run: terraform plan
+      run: terraform plan -var-file=${{ env.TF_ENV_DIR }}/terraform.tfvars
 
+    # Apply Terraform configuration
     - name: 'Terraform Apply'
-      run: terraform apply -auto-approve
-
-    # Use manual approval for Terraform Apply in production environments
-    # - name: 'Terraform Apply'
-    #   run: terraform apply -auto-approve
+      if: github.ref == 'refs/heads/prod'
+      run: terraform apply -var-file=${{ env.TF_ENV_DIR }}/terraform.tfvars -auto-approve
+      environment: 
+        name: production
+    - name: 'Terraform Apply for Dev and Test'
+      if: github.ref != 'refs/heads/prod'
+      run: terraform apply -var-file=${{ env.TF_ENV_DIR }}/terraform.tfvars -auto-approve
