--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -24,6 +24,13 @@ jobs:
       with:
         terraform_version: 1.1.0
 
+    - name: 'Set TF_VARS_PATH and TF_BACKEND_CONFIG_PATH'
+      run: |
+        if [ "${{ github.ref }}" == "refs/heads/feature_fix" ]; then
+          TF_VARS_PATH="environments/dev.tfvars"
+        fi
+        echo "TF_VARS_PATH=$TF_VARS_PATH" >> $GITHUB_ENV
+
     - name: 'Terraform Init'
       run: terraform init
 
