added terraform plan -var-file= env.TF_VARS_PATH  env var

--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -35,7 +35,7 @@ jobs:
       run: terraform init
 
     - name: 'Terraform Plan'
-      run: terraform plan
+      run: terraform plan -var-file="${{ env.TF_VARS_PATH }}"
 
     - name: 'Terraform Apply'
       run: terraform apply -auto-approve
