added backend-dev.hcl with key, and added file, not put it in the init cmd though

--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -28,8 +28,10 @@ jobs:
       run: |
         if [ "${{ github.ref }}" == "refs/heads/feature_fix" ]; then
           TF_VARS_PATH="environments/dev.tfvars"
+          TF_BACKEND_CONFIG_PATH="environments/backend-dev.hcl" 
         fi
         echo TF_VARS_PATH=$TF_VARS_PATH >> $GITHUB_ENV
+        echo TF_BACKEND_CONFIG_PATH=$TF_BACKEND_CONFIG_PATH >> $GITHUB_ENV
 
     - name: 'Terraform Init'
       run: terraform init
