--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -34,13 +34,13 @@ jobs:
         echo TF_BACKEND_CONFIG_PATH=$TF_BACKEND_CONFIG_PATH >> $GITHUB_ENV
 
     - name: 'Terraform Init'
-      run: terraform init -backend-config=${{ env.TF_BACKEND_CONFIG_PATH }}
+      run: terraform init -backend-config="${{ env.TF_BACKEND_CONFIG_PATH }}"
 
     - name: 'Terraform Plan'
       run: terraform plan -var-file="${{ env.TF_VARS_PATH }}"
 
     - name: 'Terraform Apply'
-      run: terraform apply -auto-approve
+      run: terraform apply -var-file="${{ env.TF_VARS_PATH }}" -auto-approve
 
     # Use manual approval for Terraform Apply in production environments
     # - name: 'Terraform Apply'
