--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -26,9 +26,12 @@ jobs:
 
     - name: 'Set TF_VARS_PATH and TF_BACKEND_CONFIG_PATH'
       run: |
-        if [ "${{ github.ref }}" == "refs/heads/feature_fix" ]; then
+        if [ "${{ github.ref }}" == "refs/heads/dev" ]; then
           TF_VARS_PATH="environments/dev.tfvars"
           TF_BACKEND_CONFIG_PATH="environments/backend-dev.hcl" 
+        elif [ "${{ github.ref }}" == "refs/heads/feature_fix" ]; then
+          TF_VARS_PATH="environments/test.tfvars"
+          TF_BACKEND_CONFIG_PATH="environments/backend-test.hcl"
         fi
         echo TF_VARS_PATH=$TF_VARS_PATH >> $GITHUB_ENV
         echo TF_BACKEND_CONFIG_PATH=$TF_BACKEND_CONFIG_PATH >> $GITHUB_ENV
