changes feature_fix to prod

--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -3,7 +3,8 @@ name: 'DeployLandingZone'
 on:
   push:
     branches:
-      - feature_fix
+      - dev
+      - test
       - prod
   pull_request:
 
