--- a/.github/workflows/deploy_landingzone.yml
+++ b/.github/workflows/deploy_landingzone.yml
@@ -44,7 +44,7 @@ jobs:
         echo TF_BACKEND_CONFIG_PATH=$TF_BACKEND_CONFIG_PATH >> $GITHUB_ENV
 
     - name: 'Terraform Init'
-      run: terraform init -backend-config="${{ env.TF_BACKEND_CONFIG_PATH }}"
+      run: terraform init -backend-config="${{ env.TF_BACKEND_CONFIG_PATH }}" -upgrade
 
     - name: 'Terraform Plan'
       run: terraform plan -var-file="${{ env.TF_VARS_PATH }}"
